--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<div class="col-sm-8 col-sm-offset-1">
 				<div class="margin-b-60">
 					<p>我叫杨永康，半年的项目制作经验，做网站的静态页面，web手机端，响应式网站。期间做过多种类、不同风格的的网站。我具备良好的学习能力，熟悉Bootstrop、JQuery等框架。平时喜欢去运动，关注一些网络科技，非常热爱互联网行业。</p>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					
 				</div>
 
 				<!-- Progress Box -->
@@ -206,7 +206,7 @@
 			<div class="col-sm-3 sm-margin-b-30">
 				<div class="text-right sm-text-left">
 					<h2 class="margin-b-0">项目</h2>
-					<p>项目案例<br><a href="#">点击查看项目</a></p>
+					<p>项目案例<br><a href="case.html" >点击查看项目</a></p>
 				</div>
 			</div>
 			<div class="col-sm-8 col-sm-offset-1">
@@ -393,7 +393,7 @@
 				<div class="col-sm-3 sm-margin-b-30">
 					<div class="text-right sm-text-left">
 						<h2 class="margin-b-0">联系</h2>
-						<p>选我吧</p>
+						<p>我吧</p>
 					</div>
 				</div>
 				<div class="col-sm-8 col-sm-offset-1">
@@ -420,7 +420,9 @@
 </div>
 <!-- End Contact -->
 <!--========== END PAGE LAYOUT ==========-->
- 
+ <footer style="background:#fff;height:50px;">
+ 	<p style="font-size:24px;color:#ccc;text-align:center;line-height:50px;">谢谢欣赏</p>
+ </footer>
 <!-- Back To Top -->
 <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
 
