--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 			<div class="col-sm-3 sm-margin-b-30">
 				<div class="text-right sm-text-left">
 					<h2 class="margin-b-0">项目</h2>
-					<p>项目案例<br><a href="case.html" style="color:rgba(0,0,0,.8);">点我可以查看项目哦</a></p>
+					<p>项目案例<br><a href="case.html" style="color:#D90000;">点我可以查看项目哦</a></p>
 				</div>
 			</div>
 			<div class="col-sm-8 col-sm-offset-1">
